master
  - obsplus.utils.stations
    * Fixed df_to_inventory to use a local copy of the NRL for compatibility
      with ObsPy and NRLv2 (Note that NRLv1 is no longer accessible)

obsplus 0.2.5
  - obsplus
    * Modernized packaging, including src file and pyrpoject.toml (#259)
  - obsplus.bank.wavebank
    * Added a method called "get_segments_df" to return each segment of
      contiguous data (#260).
 - CI
    * Implimented conda env caching, swtiched to use mamba
 - Dependencies
    * pinned pydantic < 2.0 until we support 2.0.

obsplus 0.2.3
  - obsplus.bank
    * Better support for bank paths on Windows See # 256.
  - obsplus.events.validate
    * Loosened check for duplicate pick ids to only check for duplicate
      P and S phases
    * Made amplitude time window check skip over rejected amplitudes
  - obsplus.utils
    * Fix issue #249 to allow pandas 1.4+
  - versions
    * Dropped python 3.7 from test matrix to keep size manageable.
    * Added python 3.10 to test matrix.

obsplus 0.2.2
  - Added support for python 3.9, dropped python 3.6

obsplus 0.2.1
  - obsplus.utils
    * Handled edge case of a lower precision datetime64 causing an int64
      overflow in `obsplus.utils.time.to_datetime64` (#224).
  - obsplus.WaveBank
    * Refactored `get_waveforms_bulk` to allow a dataframe if required
      columns exist (#229).
  - Dependencies
    * Bumped pydantic min version to 1.8.2 and pandas min version to 1.0

obsplus 0.2.0
  - obsplus.structures.fetcher
    * fixed an edge case were banks with only one file failed to return
       streams (#186).
  - obsplus.structures.dfextractor
    * Handled the case of null integers in the NSLC columns and added a logic
      to force the seed_id column to match the other NSLC columns(#199)
  - obsplus.utils
    * Fixed issue with duplicate channels setting incorrect start_dates
      on station level (#188, #190).
    * Fixed an issue with `picks_to_df` which would return the wrong channel